--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DivideMotion: Dual-Stream Conditional Diffusion for Text-to-3D Hand–Object Interaction</title>
+  <title>GCD: Geometry-Constrained Pattern Reasoning for Text-Driven 3D Hand–Object Motion Synthesis</title>
   <style>
     :root{
       --bg:#fafafa; --text:#333; --muted:#555; --accent:#e67300; --link:#0366d6;
@@ -87,17 +87,17 @@
 </head>
 <body>
   <header>
-    <h1>DivideMotion: Dual-Stream Conditional Diffusion for Text-to-3D Hand–Object Interaction</h1>
-    <h2>3DV 2026 Conference submission</h2>
+    <h1>GCD: Geometry-Constrained Pattern Reasoning for Text-Driven 3D Hand–Object Motion Synthesis.</h1>
+    <h2>ICPR 2026 Conference submission</h2>
 
     <div class="authors">
-      <a href="#">Anonym</a><sup>1*</sup>,
-      <a href="#">Anonym</a><sup>1*</sup>
+      <a href="#">Josue Adossehoun</a><sup>1*</sup>,
+      <a href="#">Hazem Wannous</a><sup>1*</sup>
     </div>
 
     <div class="affiliations">
-      <sup>1</sup>Anonym,
-      <sup>2</sup>Anonym
+      <sup>1</sup>IMT Nord Europe, Lille, FRANCE
+      <sup>2</sup>IMT Nord Europe, Lille, FRANCE
     </div>
     <p><em>* indicates equal contribution</em></p>
 
@@ -105,7 +105,7 @@
       <a href="#" class="badge">arXiv</a>
       <a href="#" class="badge">Paper</a>
       <a class="badge"
-     href="https://github.com/anonym3dv/HOI-generation"
+     href="https://github.com/josueIMT/HOI-generation"
      target="_blank" rel="noopener noreferrer"
      aria-label="View code on GitHub" title="View code on GitHub">
     Code
