--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <div class="affiliations">
       <sup>1</sup>IMT Nord Europe, Lille, FRANCE
-      <sup>2</sup>IMT Nord Europe, Lille, FRANCE
+      
     </div>
     <p><em>* indicates equal contribution</em></p>
 
@@ -118,26 +118,21 @@
     <p class="lead">
       
       Generating physically plausible hand-object interactions from
-textual descriptions remains a challenging problem. Although diffusion-
-based motion models capture semantic intent and kinematic variabil-
-ity, they often lack explicit geometric reasoning during denoising, lead-
+textual descriptions remains a challenging problem. Although diffusion-based motion models capture semantic intent and kinematic variability, 
+they often lack explicit geometric reasoning during denoising, lead-
 ing to weak contact and severe interpenetration. We introduce GCD, a
-geometry-constrained dual-stream diffusion framework that embeds ge-
-ometric awareness directly into the latent denoising trajectory.
+geometry-constrained dual-stream diffusion framework that embeds geometric awareness directly into the latent denoising trajectory.
 GCD first predicts a 3D contact probability field from the object mesh
 and text, providing spatial priors for interaction hotspots. Motion syn-
 thesis is then guided by two complementary conditioning pathways: an
 object stream that encodes global semantic intent, and a hand stream
 that fuses textual cues, object features, and the predicted contact field
 to align motion with local geometric structure.
-To further ensure geometric plausibility, GCD incorporates two dedi-
-cated modules. A Geometry Predictor extracts timestep-dependent ge-
-ometry embeddings and estimates penetration likelihoods from noisy
+To further ensure geometric plausibility, GCD incorporates two dedicated modules. A Geometry Predictor extracts timestep-dependent geometry 
+embeddings and estimates penetration likelihoods from noisy
 hand–object trajectories. A Geometry Corrector refines latent features
-through gated, geometry-aware modulation. Together, these modules im-
-pose a differentiable, timestep-aware geometric constraint throughout
-denoising, improving contact stability and substantially reducing pene-
-tration artifacts.
+through gated, geometry-aware modulation. Together, these modules impose a differentiable, timestep-aware geometric constraint throughout
+denoising, improving contact stability and substantially reducing penetration artifacts.
     </p>
   </div>
 </section>
@@ -177,7 +172,13 @@ tration artifacts.
       { title: "Drink Mug with two hands",              src: "Results/drinkMug2h_h264.mp4",      tag: "GRAB"   },
       { title: "Open Laptop with right hand",           src: "Results/openLaptoprh_h264.mp4",    tag: "ARCTIC" },
       { title: "Open Microwave with left hand",         src: "Results/openMicrowavelh_h264.mp4", tag: "ARCTIC" },
-      { title: "Tape laptop with two hands",            src: "Results/tape_laptop2h_h264.mp4",   tag: "ARCTIC" }
+      { title: "Tape laptop with two hands",            src: "Results/tape_laptop2h_h264.mp4",   tag: "ARCTIC" },
+      { title: "Close the microwave with both hands",   src: "Results/c_m2h.mp4",   tag: "ARCTIC" },
+      { title: "Place Mug with right hand",            src: "Results/Placemugrh.mp4",   tag: "H2O" },
+      { title: "Play a flute with both hands",            src: "Play a flute with both hands.mp4",   tag: "GRAB" },
+      { title: "Pour milk with right hand",            src: "Results/Pour milk with rh.mp4",   tag: "H2O" },
+      { title: "Read a book with right hand",            src: "Results/Read a book with rh.mp4",   tag: "H2O" },
+
     ];
 
     const DIVERSITY_DATA = [
