--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@ denoising, improving contact stability and substantially reducing penetration ar
       { title: "Tape laptop with two hands",            src: "Results/tape_laptop2h_h264.mp4",   tag: "ARCTIC" },
       { title: "Close the microwave with both hands",   src: "Results/c_m2h.mp4",   tag: "ARCTIC" },
       { title: "Place Mug with right hand",            src: "Results/Placemugrh.mp4",   tag: "H2O" },
-      { title: "Play a flute with both hands",            src: "Play a flute with both hands.mp4",   tag: "GRAB" },
-      { title: "Pour milk with right hand",            src: "Results/Pour milk with rh.mp4",   tag: "H2O" },
-      { title: "Read a book with right hand",            src: "Results/Read a book with rh.mp4",   tag: "H2O" },
+      { title: "Play a flute with both hands",            src: "Results/Play_aflutewithbothhands.mp4",   tag: "GRAB" },
+      { title: "Pour milk with right hand",            src: "Results/Pour_milkrh.mp4",   tag: "H2O" },
+      { title: "Read a book with right hand",            src: "Results/Read_abookzithrh.mp4",   tag: "H2O" },
 
     ];
 
